# wasm_plugins

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build_plugs.ps1  build_plugs.sh
embed/: Cargo.toml
embed/src/: lib.rs  main.rs
examples/: embed.rs
examples/plugs/plug1/: Cargo.toml
examples/plugs/plug2/: Cargo.toml
examples/plugs/plug2/src/: lib.rs
examples/plugs/plug3/: Cargo.toml
examples/plugs/plug4/: Cargo.toml
examples/plugs/plug4/src/: lib.rs
plug1/: Cargo.toml
plug2/: Cargo.toml
plug2/src/: lib.rs
plug3/src/: lib.rs
plug4/src/: lib.rs
plugs/plug1/src/: lib.rs
plugs/plug2/src/: lib.rs
plugs/plug3/src/: lib.rs
plugs/plug4/src/: lib.rs
plugs/plug5/: plug5.c
src/: errors.rs  lib.rs
wasm_plugs/: Cargo.toml
wasm_plugs/src/: lib.rs
